[package]
name = "scp-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11.15", features = ["json"] }
rust-bert = "0.20.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tl = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
